--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     </form>
     <ul class='results'></ul>
 
+    <!-- if something breaks, double check the scripts order -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="scripts/Store.js"></script>
+    <script src="scripts/Api.js"></script>
+    <script src="scripts/VideoList.js"></script>
     <script src="scripts/index.js"></script>
 </body>
 </html>
